@@ -56,6 +56,9 @@ Show everything the kernel provides
 \fB\-p\fR, \fB\-\-show\-path\fR
 Show full path to files in the mapping column
 .TP
+\fB\-k\fR, \fB\-\-use\-kernel\-name\fR
+If available, use names provided by the kernel instead of "[ anon ]"
+.TP
 \fB\-c\fR, \fB\-\-read\-rc\fR
 Read the default configuration
 .TP
