@@ -18,6 +18,7 @@ procps-ng-NEXT
   * watch: Add --follow option                             Debian #469156
   * watch: 256 color support                               issue #44
   * watch.1: Warn about -d permanent option                Debian #883638
+  * pmap: add -k option to print raw names provided by kernel
 
 procps-ng-4.0.5
 ---------------
